# hello_imgui_my_app

./: .gitignore  .gitmodules  .gitpod.yml  CMakeLists.txt  Readme.md  compile_commands.json  compile_sdl_desktop.sh  hello.cpp
.github/workflows/: build.yml
.theia/: settings.json
android/res/values/: strings.xml
examples/: button.cpp  docking_example.cpp  image_hello_imgui.cpp  text_input_multiline.cpp
test/: CMakeLists.txt  test_async.cpp
